project(chuong22)
add_executable(canopen ch22-01.c)
add_executable(upper ch22-02.c)
add_executable(fcat ch22-03.c)
add_executable(letter-count ch22-04a.c)
add_executable(word-count ch22-04b.c)
add_executable(line-count ch22-04c.c)
add_executable(xor ch22-05.c)
add_executable(hex-view ch22-06.c)
add_executable(compress_file ch22-07a.c)
add_executable(uncomress_file ch22-07b.c)
add_executable(inventory_merge ch22-09.c)
add_executable(pdate ch22-11.c)
add_executable(pproduct ch22-12.c)
add_executable(flight ch22-13.c)
add_executable(enc ch22-14.c)
add_executable(fcopy ch22-16.c)
add_executable(pphone ch22-17.c)
add_executable(mmm ch22-18.c)
add_executable(w2u ch22-19a.c)
add_executable(u2w ch22-19b.c)
