project(chuong23)
add_executable(ch23-01 ch23-01.c)
target_link_libraries(ch23-01 m)
add_executable(ch23-02 ch23-02.c)
add_executable(ch23-03 ch23-03.c)
add_executable(ch23-04 ch23-04.c)
add_executable(ch23-05 ch23-05.c)
target_link_libraries(ch23-05 m)
add_executable(ch23-06 ch23-06.c)
add_executable(ch23-07 ch23-07.c)