project(chuong27)
add_executable(ch27-01a ch27-01a.c)
add_executable(ch27-01b ch27-01b.c)
add_executable(ch27-01c ch27-01c.c)
add_executable(ch27-02 ch27-02.c)
add_executable(ch27-03 ch27-03.c)
add_executable(ch27-04 ch27-04.c)
foreach(p ch27-01a ch27-01b ch27-01c ch27-02 ch27-03 ch27-04)
  target_link_libraries(${p} m)
endforeach()